server/src/parser/LeviathonParser.ts
// Generated from ./server/grammar/Leviathon.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { LeviathonListener } from "./LeviathonListener";
import { LeviathonVisitor } from "./LeviathonVisitor";


export class LeviathonParser extends Parser {
	public static readonly IF = 1;
	public static readonly ELIF = 2;
	public static readonly ELSE = 3;
	public static readonly ENDIF = 4;
	public static readonly ENDW = 5;
	public static readonly DEF = 6;
	public static readonly ENDF = 7;
	public static readonly ENDDEF = 8;
	public static readonly ENDFUNCTION = 9;
	public static readonly RANDOM = 10;
	public static readonly ELSER = 11;
	public static readonly ELSERANDOM = 12;
	public static readonly ENDR = 13;
	public static readonly ENDRANDOM = 14;
	public static readonly ENDRW = 15;
	public static readonly ENDRANDOMW = 16;
	public static readonly RESET = 17;
	public static readonly REPEAT = 18;
	public static readonly RETURN = 19;
	public static readonly CONCLUDE = 20;
	public static readonly IMPORTLIB = 21;
	public static readonly IMPORTACT = 22;
	public static readonly AS = 23;
	public static readonly UNSAFE = 24;
	public static readonly SELF = 25;
	public static readonly FUNCTION = 26;
	public static readonly ACTION = 27;
	public static readonly CALL = 28;
	public static readonly LEFT_BRACKET = 29;
	public static readonly RIGHT_BRACKET = 30;
	public static readonly LEFT_PAREN = 31;
	public static readonly RIGHT_PAREN = 32;
	public static readonly EQ = 33;
	public static readonly NE = 34;
	public static readonly GT = 35;
	public static readonly LT = 36;
	public static readonly GEQ = 37;
	public static readonly LEQ = 38;
	public static readonly INCREMENT = 39;
	public static readonly RESET_VAL = 40;
	public static readonly CALL_OP = 41;
	public static readonly ACTION_OP = 42;
	public static readonly DIRECTIVE_OP = 43;
	public static readonly USELESS_OP = 44;
	public static readonly META_OP = 45;
	public static readonly COLON = 46;
	public static readonly COMMA = 47;
	public static readonly DOT = 48;
	public static readonly HASH = 49;
	public static readonly ALIAS_OP = 50;
	public static readonly QUOTE = 51;
	public static readonly REGISTER = 52;
	public static readonly ID = 53;
	public static readonly NUMBER = 54;
	public static readonly HEX_NUMBER = 55;
	public static readonly HEX_NO_PREFIX = 56;
	public static readonly QUOTED_PATH = 57;
	public static readonly RAW_FUNCTION = 58;
	public static readonly RAW_ACTION = 59;
	public static readonly RAW_CALL = 60;
	public static readonly SCOPED_RAW_CALL = 61;
	public static readonly LINESKIP = 62;
	public static readonly WS = 63;
	public static readonly RULE_program = 0;
	public static readonly RULE_importany = 1;
	public static readonly RULE_identifier = 2;
	public static readonly RULE_import_name = 3;
	public static readonly RULE_node_name = 4;
	public static readonly RULE_action_name = 5;
	public static readonly RULE_monster_name = 6;
	public static readonly RULE_function_name = 7;
	public static readonly RULE_meta_name = 8;
	public static readonly RULE_import_alias = 9;
	public static readonly RULE_monster_alias = 10;
	public static readonly RULE_import_library = 11;
	public static readonly RULE_import_actions = 12;
	public static readonly RULE_node = 13;
	public static readonly RULE_node_declaration = 14;
	public static readonly RULE_end_node = 15;
	public static readonly RULE_segment = 16;
	public static readonly RULE_node_call_statement = 17;
	public static readonly RULE_node_call = 18;
	public static readonly RULE_scoped_node_call = 19;
	public static readonly RULE_raw_node_call = 20;
	public static readonly RULE_scoped_raw_node_call = 21;
	public static readonly RULE_action_statement = 22;
	public static readonly RULE_action_call = 23;
	public static readonly RULE_raw_action_call = 24;
	public static readonly RULE_function_call = 25;
	public static readonly RULE_raw_function_call = 26;
	public static readonly RULE_directive_statement = 27;
	public static readonly RULE_meta_statement = 28;
	public static readonly RULE_node_names = 29;
	public static readonly RULE_node_thk_id = 30;
	public static readonly RULE_node_index = 31;
	public static readonly RULE_meta_value = 32;
	public static readonly RULE_import_path = 33;
	public static readonly RULE_params = 34;
	public static readonly RULE_if_statement = 35;
	public static readonly RULE_else_statement = 36;
	public static readonly RULE_elif_statement = 37;
	public static readonly RULE_endif_statement = 38;
	public static readonly RULE_endw_statement = 39;
	public static readonly RULE_random_statement = 40;
	public static readonly RULE_elser_statement = 41;
	public static readonly RULE_endr_statement = 42;
	public static readonly RULE_endrw_statement = 43;
	public static readonly RULE_nop_statement = 44;
	public static readonly RULE_control_statement = 45;
	public static readonly RULE_register_statement = 46;
	public static readonly RULE_register_condition = 47;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "importany", "identifier", "import_name", "node_name", "action_name", 
		"monster_name", "function_name", "meta_name", "import_alias", "monster_alias", 
		"import_library", "import_actions", "node", "node_declaration", "end_node", 
		"segment", "node_call_statement", "node_call", "scoped_node_call", "raw_node_call", 
		"scoped_raw_node_call", "action_statement", "action_call", "raw_action_call", 
		"function_call", "raw_function_call", "directive_statement", "meta_statement", 
		"node_names", "node_thk_id", "node_index", "meta_value", "import_path", 
		"params", "if_statement", "else_statement", "elif_statement", "endif_statement", 
		"endw_statement", "random_statement", "elser_statement", "endr_statement", 
		"endrw_statement", "nop_statement", "control_statement", "register_statement", 
		"register_condition",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'if'", "'elif'", "'else'", "'endif'", "'endwith'", "'def'", 
		"'endf'", "'enddef'", "'endfunction'", "'random'", "'elser'", "'elseRandom'", 
		"'endr'", "'endrandom'", "'endrwith'", "'endrandomwith'", "'reset'", "'repeat'", 
		"'return'", "'conclude'", "'importlibrary'", "'importactions'", "'as'", 
		"'unsafe'", "'self'", "'function'", "'action'", "'call'", "'['", "']'", 
		"'('", "')'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'++'", "'|-'", 
		"'>>'", "'->'", "'=>'", "'*&'", "'@'", "':'", "','", "'.'", "'#'", "'&'", 
		"'\"'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "IF", "ELIF", "ELSE", "ENDIF", "ENDW", "DEF", "ENDF", "ENDDEF", 
		"ENDFUNCTION", "RANDOM", "ELSER", "ELSERANDOM", "ENDR", "ENDRANDOM", "ENDRW", 
		"ENDRANDOMW", "RESET", "REPEAT", "RETURN", "CONCLUDE", "IMPORTLIB", "IMPORTACT", 
		"AS", "UNSAFE", "SELF", "FUNCTION", "ACTION", "CALL", "LEFT_BRACKET", 
		"RIGHT_BRACKET", "LEFT_PAREN", "RIGHT_PAREN", "EQ", "NE", "GT", "LT", 
		"GEQ", "LEQ", "INCREMENT", "RESET_VAL", "CALL_OP", "ACTION_OP", "DIRECTIVE_OP", 
		"USELESS_OP", "META_OP", "COLON", "COMMA", "DOT", "HASH", "ALIAS_OP", 
		"QUOTE", "REGISTER", "ID", "NUMBER", "HEX_NUMBER", "HEX_NO_PREFIX", "QUOTED_PATH", 
		"RAW_FUNCTION", "RAW_ACTION", "RAW_CALL", "SCOPED_RAW_CALL", "LINESKIP", 
		"WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(LeviathonParser._LITERAL_NAMES, LeviathonParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return LeviathonParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Leviathon.g4"; }

	// @Override
	public get ruleNames(): string[] { return LeviathonParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return LeviathonParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(LeviathonParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, LeviathonParser.RULE_program);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 100;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					this.state = 98;
					this._errHandler.sync(this);
					switch (this._input.LA(1)) {
					case LeviathonParser.IMPORTLIB:
					case LeviathonParser.IMPORTACT:
						{
						this.state = 96;
						this.importany();
						}
						break;
					case LeviathonParser.LINESKIP:
						{
						this.state = 97;
						this.match(LeviathonParser.LINESKIP);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
				}
				this.state = 102;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
			}
			this.state = 107;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LeviathonParser.DEF || _la === LeviathonParser.LINESKIP) {
				{
				this.state = 105;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case LeviathonParser.DEF:
					{
					this.state = 103;
					this.node();
					}
					break;
				case LeviathonParser.LINESKIP:
					{
					this.state = 104;
					this.match(LeviathonParser.LINESKIP);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 109;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 110;
			this.match(LeviathonParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public importany(): ImportanyContext {
		let _localctx: ImportanyContext = new ImportanyContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, LeviathonParser.RULE_importany);
		try {
			this.state = 114;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case LeviathonParser.IMPORTLIB:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 112;
				this.import_library();
				}
				break;
			case LeviathonParser.IMPORTACT:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 113;
				this.import_actions();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public identifier(): IdentifierContext {
		let _localctx: IdentifierContext = new IdentifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, LeviathonParser.RULE_identifier);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 116;
			_localctx._id = this.match(LeviathonParser.ID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public import_name(): Import_nameContext {
		let _localctx: Import_nameContext = new Import_nameContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, LeviathonParser.RULE_import_name);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 118;
			_localctx._name = this.identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public node_name(): Node_nameContext {
		let _localctx: Node_nameContext = new Node_nameContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, LeviathonParser.RULE_node_name);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 120;
			_localctx._name = this.identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public action_name(): Action_nameContext {
		let _localctx: Action_nameContext = new Action_nameContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, LeviathonParser.RULE_action_name);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 122;
			_localctx._name = this.identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public monster_name(): Monster_nameContext {
		let _localctx: Monster_nameContext = new Monster_nameContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, LeviathonParser.RULE_monster_name);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 124;
			_localctx._name = this.identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public function_name(): Function_nameContext {
		let _localctx: Function_nameContext = new Function_nameContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, LeviathonParser.RULE_function_name);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 126;
			_localctx._name = this.identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public meta_name(): Meta_nameContext {
		let _localctx: Meta_nameContext = new Meta_nameContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, LeviathonParser.RULE_meta_name);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 128;
			_localctx._name = this.identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public import_alias(): Import_aliasContext {
		let _localctx: Import_aliasContext = new Import_aliasContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, LeviathonParser.RULE_import_alias);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 130;
			_localctx._name = this.identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public monster_alias(): Monster_aliasContext {
		let _localctx: Monster_aliasContext = new Monster_aliasContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, LeviathonParser.RULE_monster_alias);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 132;
			_localctx._name = this.identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public import_library(): Import_libraryContext {
		let _localctx: Import_libraryContext = new Import_libraryContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, LeviathonParser.RULE_import_library);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 134;
			this.match(LeviathonParser.IMPORTLIB);
			this.state = 137;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case LeviathonParser.ID:
				{
				this.state = 135;
				this.import_name();
				}
				break;
			case LeviathonParser.QUOTE:
				{
				this.state = 136;
				this.import_path();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 139;
			this.match(LeviathonParser.AS);
			this.state = 140;
			_localctx._alias = this.match(LeviathonParser.ID);
			this.state = 141;
			this.match(LeviathonParser.LINESKIP);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public import_actions(): Import_actionsContext {
		let _localctx: Import_actionsContext = new Import_actionsContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, LeviathonParser.RULE_import_actions);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 143;
			this.match(LeviathonParser.IMPORTACT);
			this.state = 144;
			this.monster_name();
			this.state = 145;
			this.match(LeviathonParser.AS);
			this.state = 146;
			_localctx._alias = this.identifier();
			this.state = 147;
			this.match(LeviathonParser.LINESKIP);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public node(): NodeContext {
		let _localctx: NodeContext = new NodeContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, LeviathonParser.RULE_node);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 149;
			this.node_declaration();
			this.state = 153;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << LeviathonParser.IF) | (1 << LeviathonParser.RANDOM) | (1 << LeviathonParser.RESET) | (1 << LeviathonParser.REPEAT) | (1 << LeviathonParser.RETURN) | (1 << LeviathonParser.CONCLUDE) | (1 << LeviathonParser.SELF) | (1 << LeviathonParser.LEFT_BRACKET))) !== 0) || ((((_la - 41)) & ~0x1F) === 0 && ((1 << (_la - 41)) & ((1 << (LeviathonParser.CALL_OP - 41)) | (1 << (LeviathonParser.ACTION_OP - 41)) | (1 << (LeviathonParser.DIRECTIVE_OP - 41)) | (1 << (LeviathonParser.USELESS_OP - 41)) | (1 << (LeviathonParser.RAW_FUNCTION - 41)))) !== 0)) {
				{
				{
				this.state = 150;
				this.segment();
				}
				}
				this.state = 155;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 156;
			this.end_node();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public node_declaration(): Node_declarationContext {
		let _localctx: Node_declarationContext = new Node_declarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, LeviathonParser.RULE_node_declaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 158;
			this.match(LeviathonParser.DEF);
			this.state = 159;
			this.node_names();
			this.state = 161;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LeviathonParser.COLON) {
				{
				this.state = 160;
				this.node_thk_id();
				}
			}

			this.state = 164;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LeviathonParser.META_OP) {
				{
				this.state = 163;
				this.node_index();
				}
			}

			this.state = 166;
			this.match(LeviathonParser.LINESKIP);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public end_node(): End_nodeContext {
		let _localctx: End_nodeContext = new End_nodeContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, LeviathonParser.RULE_end_node);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 168;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << LeviathonParser.ENDF) | (1 << LeviathonParser.ENDDEF) | (1 << LeviathonParser.ENDFUNCTION))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 170;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LeviathonParser.META_OP) {
				{
				this.state = 169;
				this.meta_statement();
				}
			}
